CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
project(Ly)
set(CMAKE_CXX_STANDARD 11)
include_directories(include)
AUX_SOURCE_DIRECTORY(src DIR_SRCS)
find_package(OpenSSL REQUIRED)
find_package(gflags REQUIRED)
ADD_EXECUTABLE(${PROJECT_NAME} main.cpp ${DIR_SRCS})
target_link_libraries(${PROJECT_NAME} gflags OpenSSL::SSL -lmysqlclient)